[gd_scene load_steps=7 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://Card.png" type="Texture" id=2]
[ext_resource path="res://16213.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Units/Warrior/Warrior.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Card" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 112.0
margin_bottom = 166.0
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
flat = true

[node name="Label" type="Label" parent="Button"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = 14.0
margin_right = 56.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Warrior"
align = 1

[node name="Image" type="Sprite" parent="Button"]
position = Vector2( 80, 90 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 83, 83 )

[node name="Description" type="Label" parent="Button"]
margin_left = 16.0
margin_top = 135.0
margin_right = 151.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 2 )
text = "- placeholder
- description"
autowrap = true
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
